--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,75 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark">
 
     <TextView
-        android:id="@+id/textview_title"
+        android:id="@+id/order_row_title"
+        android:text="Compras"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="#fff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_title"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/editTextName"/>
-
-    <EditText
-        android:id="@+id/editTextName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:hint="@string/buyer_name"
-        android:textStyle="bold"
-        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@id/recycler_orders"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textview_title" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <EditText
-        android:id="@+id/editTextCardNumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:hint="@string/credit_card_number"
-        android:textStyle="bold"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/editTextName"
-        app:layout_constraintStart_toStartOf="@+id/editTextName"
-        app:layout_constraintTop_toBottomOf="@+id/editTextName" />
+    <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recycler_orders"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="4dp"
+    android:scrollbars="vertical"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/order_row_title"
+    android:visibility="visible"/>
 
-    <EditText
-        android:id="@+id/editTextCardCode"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:hint="@string/credit_card_code"
-        android:textStyle="bold"
-        android:inputType="number"
-        app:layout_constraintHorizontal_weight="0.2"
-        app:layout_constraintBottom_toTopOf="@+id/button_end"
-        app:layout_constraintEnd_toEndOf="@id/editTextName"
-        app:layout_constraintStart_toStartOf="@id/editTextCardNumber"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCardNumber" />
-
-    <Button
-        android:id="@+id/button_end"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:text="@string/button_sign"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/editTextCardCode"
-        app:layout_constraintStart_toStartOf="@+id/editTextName"
-        app:layout_constraintEnd_toEndOf="@+id/editTextName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
